--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿absl-py==2.1.0
+absl-py==2.1.0
 altair==5.0.1
 attrs==23.2.0
 backports.zoneinfo==0.2.1
@@ -34,7 +34,7 @@ markdown-it-py==2.2.0
 MarkupSafe==2.1.5
 matplotlib==3.5.3
 mdurl==0.1.2
-numpy==1.21.6
+numpy==1.24.3
 oauthlib==3.2.2
 opencv-python==4.7.0.72
 opencv-python-headless==4.8.0.74
